<resources>
    <!-- Main Headers -->
    <string name="app_name">Semester Project</string>
    <string name="title_activity_main">Rules</string>

    <!-- Tab Names -->
    <string name="tab_name_volume">Volume</string>
    <string name="tab_name_wifi">Wifi</string>
    <string name="tab_name_bluetooth">Bluetooth</string>
    <string name="tab_name_headphones">Headphones</string>

    <!-- Time Fragment -->
    <string name="start_time_hint">Start Time</string>
    <string name="end_time_hint">End Time</string>
    <string name="times_label">Select Times</string>
    <string name="sun_label">S</string>
    <string name="mon_label">M</string>
    <string name="tues_label">T</string>
    <string name="wed_label">W</string>
    <string name="thurs_label">Th</string>
    <string name="fri_label">F</string>
    <string name="sat_label">Sa</string>

    <!-- Reminder Fragment -->
    <string name="start_reminder_hint">Start Reminder</string>
    <string name="end_reminder_hint">End Reminder</string>
    <string name="reminder_label">Type your reminder messages</string>
    <string name="reminder_notification">Reminder</string>

    <!-- Basic Fragment -->
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="rule_name">Rule Name</string>
    <string name="rule_name_hint">My Rule</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Volume Fragment -->
    <string name="start_volume_label">Set the Volume for when the rule is Active:</string>
    <string name="vibrate_label">Vibrate</string>
    <string name="volume_label">Volume</string>
    <string name="end_volume_label">Set the Volume for when the rule is Inactive</string>
    <string-array name="volume_array">
        <item>Normal</item>
        <item>Silent</item>
    </string-array>

    <!-- Bluetooth Fragment -->
    <string name="start_blutooth_label">Set Bluetooth when the rule is activated:</string>
    <string name="end_bluetooth_label">Set Bluetooth when the rule is deactivated:</string>

    <!-- Wifi Fragment -->
    <string name="start_wifi_label">Set Wifi when the rule is activated:</string>
    <string name="end_wifi_label">Set Wifi when the rule is deactivated:</string>

    <!-- Dialog -->
    <string name="time_rule">Time Rule</string>
    <string name="location_rule">Location Rule</string>

    <string name="add_location_button">Add Location</string>

    <string name="display_location_label">Selected Location: </string>

    <string name="select_radius_label">Select a Radius Around the Location: </string>

    <string name="meter_label_100">100 Meters</string>
    <string name="meter_label_50">50 Meters</string>
    <string name="meter_label_250">250 Meters</string>
    <string name="meter_label_500">500 Meters</string>
</resources>
