<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/set_start_time_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/choose_start_time" />

        <Button
            android:id="@+id/set_end_time_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/choose_end_time" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox android:id="@+id/checkbox_sun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sun_label"
            android:layout_weight="1"/>

        <CheckBox android:id="@+id/checkbox_mon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mon_label"
            android:layout_weight="1"/>

        <CheckBox android:id="@+id/checkbox_tues"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tues_label"
            android:layout_weight="1"/>

        <CheckBox android:id="@+id/checkbox_wed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wed_label"
            android:layout_weight="1"/>

        <CheckBox android:id="@+id/checkbox_thurs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thurs_label"
            android:layout_weight="1"/>

        <CheckBox android:id="@+id/checkbox_fri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fri_label"
            android:layout_weight="1"/>

        <CheckBox android:id="@+id/checkbox_sat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sat_label"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>