<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/view_padding"
        android:text="@string/reminder_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

    <EditText
        android:id="@+id/edit_text_start_reminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:hint="@string/start_reminder_hint"/>

    <EditText
        android:id="@+id/edit_text_end_reminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:hint="@string/end_reminder_hint"/>

</LinearLayout>